unpackaged/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Alchemy/Commissions Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alchemy/Commissions Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>