unpackaged/main/default/objects/Product__c/fields/APR__c.field-meta.xml
<CustomField>
    <fullName>APR__c</fullName>
    <label>APR %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.49%</fullName>
            </value>
            <value>
                <fullName>1.99%</fullName>
            </value>
            <value>
                <fullName>2.99%</fullName>
            </value>
            <value>
                <fullName>3.49%</fullName>
            </value>
            <value>
                <fullName>3.99%</fullName>
            </value>
            <value>
                <fullName>4.99%</fullName>
            </value>
            <value>
                <fullName>5.49%</fullName>
            </value>
            <value>
                <fullName>5.99%</fullName>
            </value>
            <value>
                <fullName>7.99%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>