unpackaged/main/default/objects/Product__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alchemy Products</relationshipLabel>
    <relationshipName>Alchemy_Products</relationshipName>
    <type>Lookup</type>
</CustomField>