unpackaged/main/default/objects/Product__c/fields/Dealer_Fee_Match_Active__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Match_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Fee Match Active</label>
    <type>Checkbox</type>
</CustomField>