unpackaged/main/default/objects/Product__c/fields/Marketing_Cloud_Sync__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Cloud Sync</label>
    <type>Checkbox</type>
</CustomField>