unpackaged/main/default/objects/Product__c/fields/Peace_of_Mind_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Peace_of_Mind_Start_Date__c</fullName>
    <label>Palmetto Protect Start Date</label>
    <type>Date</type>
</CustomField>