unpackaged/main/default/objects/Product__c/fields/Unique_Combo__c.field-meta.xml
<CustomField>
    <fullName>Unique_Combo__c</fullName>
    <formula>TEXT(Financing_Tool__c) + ':' + TEXT(APR__c) + ':' + TEXT( Loan_Term__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Combo</label>
    <type>Text</type>
</CustomField>