unpackaged/main/default/objects/Product__c/recordTypes/Alchemy_Products.recordType-meta.xml
<RecordType>
    <fullName>Alchemy_Products</fullName>
    <active>true</active>
    <label>Alchemy Products</label>
</RecordType>