unpackaged/main/default/objects/Product__c/recordTypes/Dealer_Fees.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Fees</fullName>
    <active>true</active>
    <label>Dealer Fees</label>
</RecordType>