unpackaged/main/default/objects/Product__c/listViews/Protect.listView-meta.xml
<ListView>
    <fullName>Protect</fullName>
    <columns>NAME</columns>
    <columns>Active_Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Peace_of_Mind_Start_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Model_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Palmetto Protect,Premium Service</value>
    </filters>
    <label>Protect</label>
</ListView>